--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${command:cmake.launchTargetPath}",
-            "args": ["6"],
+            "args": ["6","salida"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
